# My-OpenVX-1.1

./: .gitignore  .gitmodules  Build.py  CMakeLists.txt  Makefile  README  README.md
cmake_utils/: CMakeFuncs.txt  android.toolchain.cmake
concerto/: finale.mak  target.mak
concerto/compilers/: gcc.mak
debug/: vx_debug.c  vx_debug.h
examples/: vx_arrayrange.c  vx_callback.c  vx_convolution.c  vx_extensions.c  vx_eyetrack.c  vx_factory_corners.c  vx_factory_edge.c  vx_factory_pipeline.c  vx_graph_factory.c  vx_imagepatch.c  vx_independent.c  vx_introspection.c  vx_kernels.c  vx_matrix_access.c  vx_parameters.c  vx_super_res.c  vx_tiling_ext.c  vx_tiling_main.c  vx_warps.c  vx_xyz_lib.c  vx_xyz_module.c
fussion-app/: Makefile  app_env  fussion-app  fussion-app.c  fussion-app.cpp  not_box3x3_graph.h  not_not_graph.h  vx_cv_interoperate.h
fussion-app/debug_box3x3/: Makefile
fussion-app/pure_opencl_kernel_invoke/: main.c  not_not_graph.h  pure_opencl  vx_box3x3.cl
fussion-app/vx_cl-node_graph/: Makefile  fusion-app  fusion-app.cpp  fussion-app  fussion-app.cpp  not_box3x3_graph.h  not_box3x3_graph.xml  not_not_graph.h  vx_cv_interoperate.h
helper/: vx_helper.c
include/: CMakeLists.txt  concerto.mak
include/VX/: vx.h  vx_api.h  vx_compatibility.h  vx_ext_target.h  vx_helper.h  vx_kernels.h  vx_khr_dot.h  vx_khr_icd.h  vx_khr_interp.h  vx_khr_node_memory.h  vx_khr_opencl.h  vx_khr_tiling.h  vx_khr_variants.h  vx_khr_xml.h  vx_lib_debug.h  vx_lib_extras.h  vx_lib_xyz.h  vx_nodes.h  vx_types.h  vx_vendors.h  vxu.h
kernels/: CMakeLists.txt
kernels/c_model/: c_absdiff.c  c_accumulate.c  c_addsub.c  c_channel.c  c_conv3x3.c  c_convertcolor.c  c_convertdepth.c  c_convolve.c  c_fast9.c  c_filter.c  c_histogram.c  c_lut.c  c_magnitude.c  c_model.h  c_morphology.c  c_multiply.c  c_nonlinearfilter.c  c_phase.c  c_scale.c  c_sobel3x3.c  c_statistics.c  c_threshold.c  c_warp.c
kernels/debug/: d_copy.c  d_file.c
kernels/extras/: e_filter.c  e_nonmax.c  extras_k.h
kernels/fastcv/: CMakeLists.txt  fast_bitwise.c  fast_common.c  fast_common.h  fast_filter.c  fastcv_model.h  vx_fastcv.c  vx_fastcv.h
kernels/hexagon/: hexagon_model.h
kernels/opencl/: vx_add.cl  vx_histogram.cl  vx_sub.cl  vx_threshold.cl
libraries/debug/: vx_check.c  vx_compare.c  vx_copy.c  vx_debug_lib.c  vx_debug_module.c  vx_file.c  vx_fill.c
libraries/extras/: vx_edge_trace.c  vx_extras_lib.c  vx_extras_module.c  vx_extras_module.h  vx_filter.c  vx_gradients.c  vx_harris_score.c  vx_listers.c  vx_nonmax.c  vx_norm.c
my-apps/: CMakeLists.txt  app_env_windows.cmd
my-apps/debug_box3x3/: main.c
my-apps/opencl_kernel_cpu_gpu/: Makefile  main.c  my_cl_utils.h  opencl_kernel_cpu_gpu
my-apps/pure_opencl_kernel_invoke/: not_not_graph.h
my-apps/scratch/: CMakeLists.txt  scratch.cpp
my-apps/vx_cl-node_graph/: Makefile  not_box3x3_graph.xml  not_graph.h  not_not_graph.h  vx_cl-node_graph  vx_cl-node_graph.cpp
my-apps/vx_profile_and_verify/: App2Node_1I1O_1I1O.cpp  App2Node_2I1O_1I1O.cpp  App3Node_1I1O_1I1O_2I1O.cpp  AppAddSub.cpp  AppHistogram.cpp  AppOneIOneO.cpp  AppTableLookup.cpp  AppThreshold.cpp  AppTwoIOneO.cpp  Application.cpp  Application.hpp  CMakeLists.txt  Context.cpp  Context.hpp  Graph.cpp  Graph.hpp  Image.cpp  Image.hpp  Kernel.cpp  Kernel.hpp  LogStream.cpp  LogStream.h  Makefile  Node.cpp  Node.hpp  OpenCV_data_translator.cpp  OpenCV_data_translator.hpp  VirtualImage.cpp  VirtualImage.hpp  vx.hpp  vxUtils.cpp  vxUtils.h  vx_profile_and_verify.cpp  vx_scheduling.cpp
my-apps/vx_profile_and_verify/vx_scheduling/: CMakeLists.txt  CoarsenScheduling.cpp  CoarsenScheduling.h  DataObject.cpp  DataObject.h  Experiment.cpp  Experiment.h  MyNode.cpp  MyNode.h  ProfileData.cpp  ProfileData.h  RandomNodes.cpp  RandomNodes.h  vx_scheduling.cpp
sample/: CMakeLists.txt  concerto.mak
sample-c++/: Array.cpp  Array.hpp  CMakeLists.txt  Context.cpp  Context.hpp  Convolution.cpp  Convolution.hpp  Delay.cpp  Delay.hpp  Distribution.cpp  Distribution.hpp  Graph.cpp  Graph.hpp  Image.cpp  Image.hpp  LUT.cpp  LUT.hpp  Matrix.cpp  Matrix.hpp  Node.cpp  Node.hpp  Parameter.hpp  Pyramid.cpp  Pyramid.hpp  Reference.cpp  Reference.hpp  Remap.cpp  Remap.hpp  Scalar.cpp  Scalar.hpp  String.cpp  String.hpp  Target.cpp  Target.hpp  Threshold.cpp  Threshold.hpp  concerto.mak  vx.cpp  vx.hpp
sample/bindings/ruby/: History.txt  README.txt
sample/framework/: CMakeLists.txt  concerto.mak  openvx.def  vx_array.c  vx_context.c  vx_convolution.c  vx_delay.c  vx_distribution.c  vx_dot.c  vx_error.c  vx_graph.c  vx_image.c  vx_import.c  vx_kernel.c  vx_log.c  vx_lut.c  vx_matrix.c  vx_memory.c  vx_meta_format.c  vx_node.c  vx_node_api.c  vx_osal.c  vx_parameter.c  vx_pyramid.c  vx_reference.c  vx_remap.c  vx_scalar.c  vx_target.c  vx_threshold.c  vx_type_pairs.c  vx_xml_export.c  vx_xml_import.c
sample/include/: vx_array.h  vx_context.h  vx_convolution.h  vx_delay.h  vx_distribution.h  vx_error.h  vx_graph.h  vx_image.h  vx_import.h  vx_inlines.c  vx_internal.h  vx_kernel.h  vx_log.h  vx_lut.h  vx_matrix.h  vx_memory.h  vx_meta_format.h  vx_node.h  vx_osal.h  vx_parameter.h  vx_pyramid.h  vx_reference.h  vx_remap.h  vx_sample.h  vx_scalar.h  vx_target.h  vx_threshold.h  vx_type_pairs.h
sample/package/: concerto.mak
sample/targets/: CMakeLists.txt
sample/targets/c_model/: CMakeLists.txt  concerto.mak  vx_absdiff.c  vx_accumulate.c  vx_addsub.c  vx_bitwise.c  vx_canny.c  vx_channelcombine.c  vx_channelextract.c  vx_colorconvert.c  vx_convertdepth.c  vx_convolution.c  vx_fast9.c  (+20 more)
sample/targets/fastcv/: CMakeLists.txt  vx_bitwise.c  vx_filter.c  vx_interface.c  vx_interface.h
sample/targets/hexagon/: CMakeLists.txt  vx_addsub.c  vx_bitwise.c  vx_filter.c  vx_interface.c  vx_interface.h  vx_threshold.c
sample/tests/: CMakeLists.txt  concerto.mak  vx_bug13510.c  vx_bug13517.c  vx_bug13518.c  vx_cam_test.c  vx_test.c
sample/vxu/: CMakeLists.txt  concerto.mak  vx_utility.c
tools/query/: vx_query.c
vx_khr_icd/: CMakeLists.txt  README.md  vx_dispatch.c  vx_dispatch.h  vx_khr_icd.c  vx_khr_icd.py
(+54 files in other folders)
